testsuite/tests/grammar/invalid_skip/test.out
== test.lkt ==
test.lkt:7:29: error: Skip parsers can only create error nodes
7 |     @main_rule main_rule <- skip(Example)
  |                             ^^^^^^^^^^^^^


Done
